[package]
name = "tpdf"
version = "0.1.0"
edition = "2021"
description = "A fast terminal PDF viewer with image protocol support"
license = "GPL-3.0-only"
keywords = ["pdf", "terminal", "viewer", "tui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm"] }
image = "0.25"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
mupdf = "0.6"
mimalloc = "0.1"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["prepush-hook", "run-cargo-fmt", "run-cargo-clippy"] }

[profile.release]
lto = "fat"
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Numeric casts are pervasive in graphics/TUI code and always bounded by context
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
# False positive on App — bools are independent flags, not a state machine
struct_excessive_bools = "allow"
# Not useful for private helpers that take small Copy-like enums
needless_pass_by_value = "allow"
# input.rs functions can't be const due to match guards
missing_const_for_fn = "allow"
